<resources>
    <string name="app_name">My CookBook</string>
    <string name="action_settings">Settings</string>

    <string name="add_recipe">Add Recipe</string>
    <string name="hintWordTitle">Title</string>
    <string name="hintWordServings">Servings</string>
    <string name="hintWordIngredients">Ingredients</string>
    <string name="hintWordDetails">Details</string>
    <string name="hintWordTips">Tips</string>
    <string name="button_save">Save Recipe</string>

    <string name="empty_not_saved">No Recipe Saved.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
