<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    tools:context=".add.FragmentAddRecipe"
    tools:showIn="@layout/add_recipe">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWordIpTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hintWordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWordIpServings"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hintWordServings">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWordServings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWordIpIngredients"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hintWordIngredients">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWordIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWordIpDetails"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hintWordDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWordDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWordIpTips"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hintWordTips">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editWordTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_save" />

</LinearLayout>